side navs and spacing fixes

--- a/depl-resources-frontend/src/main.css
+++ b/depl-resources-frontend/src/main.css
@@ -21,7 +21,12 @@ a {
   text-decoration: none;
 }
 
+#root {
+  height: 100%;
+}
+
 .pageWrapper {
   padding: 0 20px;
-  min-height: 100%;
+  height: 100%;
+  margin-bottom: 45px;
 }
